K8s/request-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: request-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: request-service
  template:
    metadata:
      labels:
        app: request-service
    spec:
      containers:
        - name: request-service
          image: afsalm/lostlink-request-service:v1
          ports:
            - containerPort: 7003
---
apiVersion: v1
kind: Service
metadata:
  name: request-service
spec:
  selector:
    app: request-service
  ports:
    - port: 7003
      targetPort: 7003
  type: ClusterIP
