K8s/user-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
        - name: user-service
          image: afsalm/lostlink-user-service:v10.4
          ports:
            - containerPort: 7002 
            - containerPort: 50051
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
spec:
  selector:
    app: user-service
  ports:
    - name: http
      port: 7002
      targetPort: 7002
    - name: grpc
      port: 50051
      targetPort: 50051
  type: ClusterIP
